# ONNX_Rustime

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  pyproject.toml
.cargo/: config
data/: test_serialized_data.pb
js_onnx_rustime/: package.json  test_onnx_rustime.js
models/bvlcalexnet-12/: output_demo.pb
models/caffenet-12/: output_demo.pb
models/caffenet-12/test_data_set_0/: input_0.pb  output_0.pb
models/mnist-8/: output_demo.pb
models/mnist-8/test_data_set_0/: input_0.pb  output_0.pb
models/resnet152-v2-7/: output_demo.pb
models/resnet152-v2-7/test_data_set_0/: input_0.pb  output_0.pb
models/resnet18-v2-7/test_data_set_0/: input_0.pb  output_0.pb
models/zfnet512-12/test_data_set_0/: input_0.pb  output_0.pb
py_onnx_rustime/: onnx_rustime_lib.pyi  test_onnx_rustime.py
src/: display.rs  lib.rs  main.rs
src/onnx_rustime/: mod.rs  shared.rs
src/onnx_rustime/backend/: helper.rs  mod.rs  parser.rs  pre_processing.rs  run.rs
src/onnx_rustime/onnx_proto/: mod.rs  onnx_data_proto3.rs  onnx_ml_proto3.rs  onnx_operators_ml_proto3.rs
src/onnx_rustime/ops/: add.rs  batch_normalization.rs  concat.rs  conv.rs  dropout.rs  exp.rs  flatten.rs  gemm.rs  global_average_pool.rs  lrn.rs  matmul.rs  maxpool.rs  mod.rs  reduce_sum.rs  relu.rs  reshape.rs  softmax.rs  utils.rs
