[package]
name = "onnx_rustime_project"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug-assertions = false

[dependencies]
colored = "2.0.4"
dialoguer = "0.10.4"
indicatif = "0.17.6"
lazy_static = "1.4.0"
ndarray = { version = "0.15.6", features = ["rayon"] }
num-traits = "0.2"
once_cell = "1.18.0"
protobuf = "2.28"
rand = "0.8.4"
rayon = "1.5"
pyo3 = { version = "0.19.2", optional = true, features = ["extension-module"] }
neon = { version = "0.10", optional = true, default-features = false, features = ["napi-6"] }
image = "0.24.7"

[build-dependencies]
protoc-rust = "2.28"
maturin = "1.2"

[features]
default = []
include_pyo3 = ["pyo3"]
include_neon = ["neon"]

[package.metadata.maturin]
name = "onnx_rustime_lib"
version = "0.1.0"
description = "ONNX Rustime, python binding"
license = "MIT"
default-features = false

[lib]
name = "onnx_rustime_lib"
crate-type = ["cdylib"]
